[tool.poetry]
name = "amazon-vine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mechanize = "*"
fake-useragent = "*"
browsercookie = "*"
image = "*"
beautifulsoup4 = "*"
lxml = "*"

[tool.poetry.dev-dependencies]
autopep8 = "*"
mypy = "*"
pylint = "*"
pytest = "*"
python-language-server = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
